--- a/blocitoff/README.rdoc
+++ b/blocitoff/README.rdoc
@@ -1,2 +1,27 @@
-## Bloccitoff
-Made with my mentor at [Bloc](http://bloc.io).
+<snippet>
+  <content>
+# Blocipedia
+This is just one of the most common applications that almost every developer starts with, a to-do list.
+The application shows when an item is created and removes it automatically when time elapsed. It is developed in Rails.
+
+
+## Installation
+You could clone this application:
+```
+git clone https://github.com/Alexashooo/blocitoff.git
+```
+...and then run
+```
+bundle install
+```
+If you do not have Bundler installed, please run:
+```
+gem install Bundler
+```
+
+
+
+
+  </content>
+
+</snippet>
